Fixed report screenshot not aligning properly

--- a/assets/css/embed.less
+++ b/assets/css/embed.less
@@ -800,10 +800,11 @@ body {
 		width: 48px;
 		height: 48px;
 		padding: 4px;
-		margin: 0 4px;
+		margin: 0 3px;
 		line-height: 48px;
 		vertical-align: middle;
 		border-radius: 2px;
+		text-align: center;
 
 		&:hover {
 			background-color: @cyan100;
